--- a/src/scss/features/helpers-tables.scss
+++ b/src/scss/features/helpers-tables.scss
@@ -72,9 +72,6 @@ tbody > tr > td,
   color:var(--text-faint);
   font-variant-numeric:tabular-nums;
 }
-.table-numbers table:not(.calendar) > tbody > tr > td:first-child {
-  white-space:nowrap;
-}
 .row-highlight table:not(.calendar) tbody > tr:hover td {
   background-color:var(--background-table-rows);
 }
